--- a/index.html
+++ b/index.html
@@ -236,5 +236,6 @@
     <script src="/js/modal.js"></script>
     <script src="/js/register.js"></script>
     <script src="/js/login.js"></script>
+    <script src="/js/local.js"></script>
   </body>
 </html>
