--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <p id="texto-usuario"></p>
             <button class="btn"><a href="/index.html">Cerrar sesión</a></button>
           </div>
-
         </div>
       </div>
     </div>
@@ -105,7 +104,6 @@
       </div>
     </div>
 
-    
     <div id="contentUser" class="margins container content-hidden">
       <div class="reser">
         <h1>Mis reservas</h1>
@@ -114,8 +112,7 @@
             <a href="#" class="card-image-square w-inline-block"
               ><img src="" alt="" class="card-image"
             /></a>
-            <div  id="list" class="card-content">
-            </div>
+            <div id="list" class="card-content"></div>
           </div>
         </div>
       </div>
@@ -135,8 +132,6 @@
           "
           sizes="(max-width: 767px) 100vw, 500px"
           srcset="images/YumYum-p-500.png 500w, images/YumYum.png 515w"
-          alt=""
-          class="cursive-text"
         />
         <div class="title-wrap-centre">
           <h1 class="header-h1">
@@ -149,9 +144,6 @@
         <p id="state-in"></p>
       </div>
     </div>
-
-
-
 
     <div class="content-section-bg">
       <div class="container">
@@ -170,15 +162,21 @@
         </div>
       </div>
     </div>
-
-  }
-
+    <div id="mislocales"></div>
     <div id="modal" class="close">
       <div id="cruce">x</div>
       <div class="title-wrap-centre">
         <h2 class="modalTitle">Iniciar sesión</h2>
-        <input id="txt-usuario" type="text" placeholder="Nombre de usuario" />
-        <input id="txt-passwordLogin" type="password" placeholder="contraseña" />
+        <input
+          id="txt-usuarioLogin"
+          type="text"
+          placeholder="Nombre de usuario"
+        />
+        <input
+          id="txt-passwordLogin"
+          type="password"
+          placeholder="contraseña"
+        />
         <button class="button" id="btn-acceder">Acceder</button>
         <p class="error" id="txt-errorLg"></p>
       </div>
@@ -193,10 +191,9 @@
         <input id="txt-contraseñaRg" type="password" placeholder="contraseña" />
         <p id="text-errorRg" class="error"></p>
         <button class="button" id="btn-registrarme">Registrarme</button>
-        <p  class="error" id="txt-errorRg"></p>
+        <p class="error" id="txt-errorRg"></p>
         <p class="txt-correcto"></p>
       </div>
-
     </div>
     <div class="footer">
       <div class="container">
@@ -237,5 +234,6 @@
     <script src="/js/register.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/local.js"></script>
+    <script src="/js/calificaciones.js"></script>
   </body>
 </html>
