--- a/index.html
+++ b/index.html
@@ -103,11 +103,56 @@
         </div>
       </div>
     </div>
+<div class="content margins container" id="contentLocal">
+    <div class="reser">
+      <h1>Mis reservas</h1>
+      <div class="menu-item">
+        <div class="card">
+          <a href="#" class="card-image-square w-inline-block"
+            ><img src="" alt="" class="card-image"
+          /></a>
+          <div id="list" class="card-content"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container-flex">
+      <img
+        src="images/YumYum.png"
+        style="
+          -webkit-transform: translate3d(0, 45px, 0) scale3d(1, 1, 1)
+            rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+          -moz-transform: translate3d(0, 45px, 0) scale3d(1, 1, 1) rotateX(0)
+            rotateY(0) rotateZ(0) skew(0, 0);
+          -ms-transform: translate3d(0, 45px, 0) scale3d(1, 1, 1) rotateX(0)
+            rotateY(0) rotateZ(0) skew(0, 0);
+          transform: translate3d(0, 45px, 0) scale3d(1, 1, 1) rotateX(0)
+            rotateY(0) rotateZ(0) skew(0, 0);
+          opacity: 0;
+        "
+        sizes="(max-width: 767px) 100vw, 500px"
+        srcset="images/YumYum-p-500.png 500w, images/YumYum.png 515w"
+      />
+      <div class="title-wrap-centre">
+        <h1 class="header-h1">
+          Todas las <span class="brand-span">mejores</span>
+          <span class="brand-span">opciones</span> para ti.
+        </h1>
+      </div>
+    </div>
+    <div id="services">
+      <p id="state-in"></p>
+    </div>
+
+</div>
+
+
+
+
 
     <div id="contentUser" class="margins container content-hidden">
       <div class="reser">
         <h1>Mis reservas</h1>
-        <div role="listitem" class="menu-item">
+        <div class="menu-item">
           <div class="card">
             <a href="#" class="card-image-square w-inline-block"
               ><img src="" alt="" class="card-image"
@@ -143,8 +188,7 @@
       <div id="services">
         <p id="state-in"></p>
       </div>
-    </div>
-
+    </div>    
     <div class="content-section-bg">
       <div class="container">
         <div class="w-layout-grid content-grid">
