display para login

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
         </div>
       </div>
     </div>
-<div class="content margins container" id="contentLocal">
+<div class="content margins container content-hidden" id="contentLocal">
     <div class="reser">
-      <h1>Mis reservas</h1>
+
+      <h1>Mis Reservas<h1>
       <div class="menu-item">
         <div class="card">
           <a href="#" class="card-image-square w-inline-block"
@@ -151,7 +152,7 @@
 
     <div id="contentUser" class="margins container content-hidden">
       <div class="reser">
-        <h1>Mis reservas</h1>
+        <h1>Mi local</h1>
         <div class="menu-item">
           <div class="card">
             <a href="#" class="card-image-square w-inline-block"
