dejar confirmar aparte

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
         </div>
       </div>
     </div>
+
+
+    <div class="content-hidden" id="reservasConfirmadas">
+      <h3>Reservas confirmadas..</h3>
+    </div>
+    <div id="estrellas">
+    
+    </div>
+
+
 <div class="content margins container content-hidden" id="contentLocal">
     <div class="reser">
 
@@ -146,18 +156,14 @@
 
 </div>
 
-
-
-
-
     <div id="contentUser" class="margins container content-hidden">
       <div class="reser">
         <h1>Mi local</h1>
         <div class="menu-item">
           <div class="card">
-            <a href="#" class="card-image-square w-inline-block"
-              ><img src="" alt="" class="card-image"
-            /></a>
+           <div id="miLocal">
+
+           </div>
             <div id="list" class="card-content"></div>
           </div>
         </div>
@@ -207,7 +213,6 @@
         </div>
       </div>
     </div>
-    <div id="mislocales"></div>
     <div id="modal" class="close">
       <div id="cruce">x</div>
       <div class="title-wrap-centre">
@@ -226,6 +231,8 @@
         <p class="error" id="txt-errorLg"></p>
       </div>
     </div>
+
+  
 
     <div id="modal-signIn" class="close">
       <div id="cruce2">x</div>
