elimine estructuras que no necesitana y comentarios

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
           <div class="menu-button w-nav-button">
             <div class="icon w-icon-nav-menu"></div>
           </div>
-
           <nav id="nav-botones" class="nav-menu w-nav-menu">
             <button class="button" id="btn-login">Iniciar sesión</button>
             <button class="button" id="btn-signIn">Crear cuenta</button>
           </nav>
-
           <div id="nav-usuario" class="content-hidden">
             <p id="texto-usuario"></p>
             <button class="btn"><a href="/index.html">Cerrar sesión</a></button>
@@ -103,19 +101,15 @@
         </div>
       </div>
     </div>
-
-
+<div>
+</div>
     <div class="content-hidden" id="reservasConfirmadas">
       <h3>Reservas confirmadas..</h3>
+      <div id="estrellas">
+      </div>
     </div>
-    <div id="estrellas">
-    
-    </div>
-
-
 <div class="content margins container content-hidden" id="contentLocal">
     <div class="reser">
-
       <h1>Mis Reservas<h1>
       <div class="menu-item">
         <div class="card">
@@ -153,16 +147,13 @@
     <div id="services">
       <p id="state-in"></p>
     </div>
-
 </div>
-
     <div id="contentUser" class="margins container content-hidden">
       <div class="reser">
         <h1>Mi local</h1>
         <div class="menu-item">
           <div class="card">
            <div id="miLocal">
-
            </div>
             <div id="list" class="card-content"></div>
           </div>
@@ -231,9 +222,6 @@
         <p class="error" id="txt-errorLg"></p>
       </div>
     </div>
-
-  
-
     <div id="modal-signIn" class="close">
       <div id="cruce2">x</div>
       <div class="title-wrap-centre">
@@ -285,7 +273,6 @@
     <script src="/js/modal.js"></script>
     <script src="/js/register.js"></script>
     <script src="/js/login.js"></script>
-    <script src="/js/local.js"></script>
     <script src="/js/calificaciones.js"></script>
   </body>
 </html>
