--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <button id="btn-promedio">ver promedios de reservas</button>
+    </div>
     <div id="Header" class="header">
       <div class="container-flex">
         <div class="hero-content">
